--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@feathersjs/socketio": "^3.2.4",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "feathers-authentication-hooks": "^0.3.1",
     "feathers-hooks-common": "^4.16.3",
     "feathers-nedb": "^3.1.0",
     "helmet": "^3.13.0",
